--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev:map": "vite examples/maplibre"
+    "dev:maplibre": "vite examples/maplibre",
+    "dev:leaflet": "vite examples/leaflet"
   },
   "devDependencies": {
     "@turf/turf": "^7.3.4",
     "@types/geojson": "^7946.0.16",
+    "@types/leaflet": "^1.9.21",
+    "leaflet": "^1.9.4",
     "maplibre-gl": "^5.18.0",
     "typescript": "~5.9.3",
     "vite": "^7.3.1"
