--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "files": ["dist"],
   "devDependencies": {
     "@turf/turf": "^7.3.4",
     "@types/geojson": "^7946.0.16",
